# BookAi

./: .gitignore  CLAUDE.md  Dockerfile  chat_cli.py  docker-compose.dev.yml  docker-compose.yml  main.py  mcp_server.py  orquestacion_multiagente.py  pyproject.toml  rebuild_container.sh  requirements.txt  run_pipeline.sh  setup_env.sh
agents/: base_agent.py  dispo_precios_agent.py  info_agent.py  interno_agent.py  main_agent.py  onboarding_agent.py  superintendente_agent.py  supervisor_input_agent.py  supervisor_output_agent.py
alembic/: env.py
api/: chatter_routes.py  superintendente_routes.py  template_routes.py
channels_wrapper/: base_channel.py  manager.py
commands/: clean_logs.sh  disable_ai_global.sh  patch_fastmcp.sh  rebuild_chat.sh  run_terminal.sh  run_whatsapp.sh  run_whatsapp_prod.sh  run_whatsapp_with_ngrok.sh  setup_chat_id.sh
core/: app_state.py  async_bridge.py  config.py  consent_manager.py  constants.py  db.py  escalation_db.py  escalation_manager.py  graph.py  instance_context.py  language.py  language_manager.py  logging.py  logging_setup.py  main_agent.py  mcp_client.py  memory_manager.py  message_backup.py  message_buffer.py  message_utils.py  nodes.py  normalize_reply.py  notification.py  observability.py  offer_semantics.py  pipeline.py  reply_utils.py  roomdoo_token.py  router.py  socket_manager.py  state.py  template_button_url.py  template_registry.py  template_structured.py  utils.py  utils_prompt.py  whatsapp_healthcheck.py  whatsapp_monitor.py
dev_ui/: index.html
docs/: FRONTEND_INTEGRATION.md  ODOO_MODULE_AGENT_INSTRUCTIONS.md  PHASE1.md  SDK_AGENT_INSTRUCTIONS.md  api-migration-guide.html  api-migration-guide.md  asyncapi.yaml  escalation-draft-endpoints.md  frontend-ai-prompts.md
hotel_ai/: Dockerfile  chat_cli.py  requirements.txt
legacy/: main.py  requirements.txt
pipeline/: check_env.py  chunker.py  deadline_filter.py  run_pipeline.py  s3_client.py  s3_watcher.py  storage_client.py  supabase_utils.py  (+2 more)
(+257 files in other folders)
